# PyPacman

./: .gitignore  AGENTS.md  BUGFIX_SUMMARY.md  CHANGELOG.md  Claude.md  FIXES_SUMMARY.md  LICENSE  PHASE_2_COMPLETE.md  README.md  REFACTOR_SUMMARY.md  STATUS.md  create_maze.py  debug_maze.py  pyproject.toml  requirements.txt  setup.py  test_full_render.py  test_movement.py  test_pacman.py  test_render.py  verify_final.py  verify_maze.py
PyPacman/: __init__.py  main.py
PyPacman/core/: __init__.py  colors.py  config.py  constants.py  game_engine.py  game_state.py  maze.py  scoring.py  sprites.py  types.py
PyPacman/data/: __init__.py  levels.py
PyPacman/entities/: __init__.py  base.py  ghost.py  ghost_manager.py  pacman.py
PyPacman/ui/: __init__.py  display.py  input_handler.py
ascii_pacman/: __init__.py  main.py
ascii_pacman/core/: constants.py  game_engine.py  scoring.py
ascii_pacman/data/: __init__.py  levels.py
ascii_pacman/entities/: base.py  ghost.py  ghost_manager.py  pacman.py
data/: __init__.py  levels.py
docs/: ASCII_PACMAN_v1.0_RELEASED.txt  FINAL_FIX_SUMMARY.md  FIXES_SUMMARY.md  PHASE_1_COMPLETE.md  PHASE_5_STATUS.md  PHASE_6_STATUS.md  PROJECT_COMPLETE.txt  RELEASE_v1.0.md  _FINAL_DELIVERY.txt
src/: __init__.py  constants.py  display.py  game_engine.py  ghost.py  ghost_manager.py  input_handler.py  main.py  pacman.py
tests/: __init__.py  test_cli.py  test_display.py  test_game_engine.py  test_game_state.py  test_ghost.py  test_input_handler.py  test_maze.py  test_pacman.py  test_scoring.py
