[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascii-pacman"
version = "1.0.0"
description = "A terminal-based ASCII version of the classic Pac-Man arcade game"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ASCII Game Studio"},
]
keywords = ["game", "pacman", "arcade", "terminal", "ascii", "console"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Arcade",
]
dependencies = []

[project.scripts]
ascii-pacman = "ascii_pacman:main"
pacman = "ascii_pacman:main"

[project.urls]
Homepage = "https://github.com/yourusername/ascii-pacman"
Repository = "https://github.com/yourusername/ascii-pacman.git"
"Bug Tracker" = "https://github.com/yourusername/ascii-pacman/issues"

[tool.setuptools.packages.find]
include = ["ascii_pacman*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
ascii_pacman = ["data/*.py"]
